# workersql

./: .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.js.bak  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  jest.config.cjs  jest.config.js  junit.xml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.app.config.ts  vitest.config.ts  vitest.simple.config.ts  vitest.workers.config.ts  vitest.workspace.js  vitest.workspace.ts  wrangler.toml  wrangler.toml.template
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: 015-spa-client.instructions.md  TODO0.md.x  TODO1.md.x  TODO2.md.x  TODO3.md.x  TODO4.md.x  TODO5.md.x  admin-gui-cloudflare-integration.instructions.md  configuration-system.instructions.md  consistency-models.instructions.md  core-engine.instructions.md  d1-rest-api.instructions.md  data-persistence.instructions.md  durable-object-shard-sqlite.instructions.md  foundation-architecture.instructions.md  geospatial.instructions.md  monitoring-service.instructions.md  objective_v0.instructions.md.x  optimization-performance.instructions.md  pre-commit-setup.instructions.md  production-deployment.instructions.md  queue-invalidation.instructions.md  sdk-java.instructions.md  sdk-node.instructions.md  sdk-php.instructions.md  sdk-python.instructions.md  shard-split-lifecycle.instructions.md  sql-parser.instructions.md
.github/workflows/: ci.yml
config/: routing-policy.yaml
config/n8n/: README.md  credentials.yaml  execution_data.yaml  executions.yaml  routing-policy.yaml  settings.yaml  webhook_entity.yaml  workflows.yaml
config/woocommerce/: README.md  routing-policy.yaml  wc_customer_sessions.yaml  wc_customers.yaml  wc_inventory.yaml  wc_orders.yaml  wc_payment_tokens.yaml  wc_products.yaml
config/wordpress/: README.md  routing-policy.yaml  wp_comments.yaml  wp_options.yaml  wp_posts.yaml  wp_terms.yaml  wp_users.yaml
docs/: CLOUDFLARE-ALIGNMENT-CHECKLIST.md  D1-MIGRATION-SUMMARY.md  D1-REST-API.md  api-specification.md  developer-setup-guide.md  environment-configuration.md  local-development-setup.md  security-guidelines.md  security-setup.md
docs/architecture/: 001-cloudflare-workers-platform.md  002-durable-objects-storage.md  003-cache-aside-pattern.md  004-typescript-strict-mode.md  005-jest-vitest-testing.md  006-routing-sharding-system.md  007-gateway-worker-implementation.md  008-sql-compatibility-layer.md  009-connection-management.md  010-sdk-integration.md  011-shard-management.md  012-security-enhancements.md  015-spa-client.md  017-geospatial.md  018-go-sdk.md  README.md
scripts/: e2e-runner.mjs
sdk/go/: CHANGELOG.md  README.md  go.mod
sdk/java/: .gitignore  CHANGELOG.md  FEATURES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pom.xml
sdk/node/: README.md  README_MYSQL2.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/php/: README.md  README_MYSQL_COMPAT.md  composer.json  phpunit.xml
sdk/python/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_DBAPI.md  example.py  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py  workersql_client.py
sdk/python/tests/: __init__.py  conftest.py  test_client.py  test_connection_pool.py  test_dsn_parser.py  test_mysql_compat.py  test_retry_logic.py
sdk/python/workersql_client/: __init__.py  connection_pool.py  dsn_parser.py  metadata.py  mysql_compat.py  retry_logic.py  stored_procedures.py  streaming.py  workersql_client.py
sdk/python/workersql_client/dbapi/: __init__.py  connection.py  cursor.py  exceptions.py
sdk/schema/: types.d.ts  types.d.ts.map  types.js  types.ts  validator.d.ts  validator.d.ts.map  validator.js  validator.js.map  validator.ts  workersql.schema.json
src/: gateway.ts
src/app/: README.md  components.json  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/services/: AuditLoggingService.ts  AuthService.ts  BaseService.ts  CacheService.ts  CircuitBreakerService.ts  ComplianceService.ts  ConfigService.ts  ConnectionManager.ts  D1Service.ts  DataEncryptionService.ts  GeospatialService.ts  Logger.ts  MonitoringService.ts  QueueEventSystem.ts  RBACService.ts  RouterService.ts  RoutingVersionManager.ts  SQLCompatibilityService.ts  SQLSecurityService.ts  SecretsService.ts  ShardMigrationService.ts  ShardSplitService.ts  TableShard.ts  (+2 more)
tests/: global.d.ts  setup.d.ts  setup.d.ts.map  setup.js  setup.js.map  setup.ts  simple.vitest.test.ts  vitest.global-setup.ts  vitest.setup.ts
(+182 files in other folders)
